# ms_emu

./: .clang-format  .gitignore  CMakeLists.txt  packages.json
bios/: Makefile  bios.rom  bios.s  doc.org
source/: 16_bit_modrm.hpp  8086_cpu.cpp  8086_cpu.hpp  8086_modrm.hpp  8086_registers.cpp  8086_registers.hpp  CMakeLists.txt  bus.hpp  core_dump.cpp  core_dump.hpp  device.hpp  main.cpp  memory.hpp
test_binaries/: aaa.s  get_opcode.asm  jmp.s  mov_opcodes.asm  push.s  simple  simple.asm
tests/: CMakeLists.txt  aaa_tests.cpp  aad_tests.cpp  aam_tests.cpp  aas_tests.cpp  adc_tests.cpp  cpu8086_for_test.cpp  cpu8086_for_test.hpp  jmp_tests.cpp  mov_tests.cpp  pop_tests.cpp  push_tests.cpp  test_base.cpp  test_base.hpp
